--- a/hopsworks-common/pom.xml
+++ b/hopsworks-common/pom.xml
@@ -207,32 +207,12 @@
     <dependency>
       <groupId>org.apache.flink</groupId>
       <artifactId>flink-clients_2.11</artifactId>
-      <version>1.1.3</version>
-      <exclusions>
-        <exclusion>
-          <groupId>org.apache.flink</groupId>
-          <artifactId>flink-shaded-hadoop2</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>com.fasterxml.jackson.core</groupId>
-          <artifactId>jackson-databind</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>io.netty</groupId>
-          <artifactId>netty-all</artifactId>
-        </exclusion>
-      </exclusions>
+      <version>1.8.0</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.flink</groupId>
+      <groupId>io.hops.flink</groupId>
       <artifactId>flink-yarn_2.11</artifactId>
-      <version>1.1.3</version>
-      <exclusions>
-        <exclusion>
-          <groupId>org.apache.flink</groupId>
-          <artifactId>flink-shaded-hadoop2</artifactId>
-        </exclusion>
-      </exclusions>
+      <version>1.8.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
