Fix kafka test, change elastic to kibana

--- a/hopsworks-IT/src/test/ruby/.env.example
+++ b/hopsworks-IT/src/test/ruby/.env.example
@@ -15,6 +15,7 @@ HOPSWORKS_TESTING=/hopsworks-testing/api            # The path to the rest api a
 ELASTIC_API=10.0.2.15:9200                          # The endpoint for the elastic rest api
 ELASTIC_USER=admin                                  # The elastic user used for http requests
 ELASTIC_PASS=adminpw                                # The elastic pass used for http requests
+KIBANA_API=10.0.2.15:5601                           # The endpoint for the Kibana rest api
 LAUNCH_BROWSER=false                                # If set to true will launch test report in a browser
 SKIP_VM_TEST=false                                  # If true skips test that need to run inside a vm
 OS=ubuntu
